--- a/conf_host.json.sample
+++ b/conf_host.json.sample
@@ -10,6 +10,7 @@
     },
     "recv_size": 1024,
     "queue_size": 1024,
-    "queue_timeout": 3
+    "queue_timeout": 3,
+    "recv_timeout": 3
   }
 }
