--- a/conf_local.json.sample
+++ b/conf_local.json.sample
@@ -6,6 +6,7 @@
     "B_port": 4891,
     "recv_size": 1024,
     "queue_size": 1024,
-    "queue_timeout": 3
+    "queue_timeout": 3,
+    "recv_timeout": 3
   }
 }
